<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity"
    android:background="@color/white">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="411dp"
        android:layout_height="374dp"
        android:layout_marginTop="90dp"
        android:padding="30dp"
        android:scaleType="centerInside"
        android:scaleX="1.6"
        android:scaleY="1.5"
        android:src="@drawable/homespash"
        app:layout_constraintBottom_toTopOf="@id/text_center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_main_start"
        android:layout_width="348dp"
        android:layout_height="74dp"
        android:layout_marginBottom="90dp"
        android:background="@drawable/custom_background_button"
        android:text="@string/start"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:fontFamily="@font/intersemibold"
        android:contentDescription="@string/description"
        app:layout_constraintTop_toBottomOf="@id/textView5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/interbold"
        android:text="@string/text_central"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:text="@string/text_bottom_central"
        android:textAlignment="center"
        android:textColor="@color/gray_two"
        android:textSize="13sp"
        android:fontFamily="@font/interlight"
        app:layout_constraintTop_toBottomOf="@id/text_center"
        app:layout_constraintBottom_toTopOf="@+id/button_main_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/developer_by"
        android:textSize="12sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_main_start"
        app:layout_constraintEnd_toStartOf="@id/logomain"/>

    <ImageView
        android:id="@+id/logomain"
        android:layout_width="82dp"
        android:layout_height="35dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/brandvolpi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/button_main_start" />





</androidx.constraintlayout.widget.ConstraintLayout>


